# argparse-shell

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish-to-pypi.yaml  test.yml
argparse_shell/: __init__.py  argparse_shell.py  builder.py  command.py  constants.py  decorators.py  interactive.py  namespace.py  testing.py  utils.py  wrappers.py
test/: test_argparse_shell.py  test_builder.py  test_command.py  test_interactive.py  test_namespace.py  test_utils.py  test_wrappers.py
