[metadata]
name = argparse-shell
description = A Python library to easily build interactive command line interfaces
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/jonasehrlich/argparse-shell
author = Jonas Ehrlich
author_email = jonas.ehrlich@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
# project_urls =
#     Documentation = https://screed.readthedocs.io
#     Source = https://github.com/dib-lab/screed
#     Tracker = https://github.com/dib-lab/screed/issues

[options]
zip_safe = False
packages = find:
platforms = any
#include_package_data = True
python_requires = >=3.7
setup_requires =
    setuptools_scm

[aliases]
test=pytest

[bdist_wheel]
universal = 1


[options.extras_require]
test =
    pytest >= 6.2.2
    pytest-subtests
    pycodestyle
    pytest-cov
all =
    %(test)s
