[metadata]
name = argparse-shell
description = A Python library to easily build interactive command line interfaces
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/jonasehrlich/argparse-shell
author = Jonas Ehrlich
author_email = jonas.ehrlich@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/jonasehrlich/argparse-shell
    Tracker = https://github.com/jonasehrlich/argparse-shell/issues

[options]
zip_safe = False
packages = find:
platforms = any
#include_package_data = True
python_requires = >=3.7
setup_requires =
    setuptools_scm

[aliases]
test=pytest

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
per-file-ignores =
    */__init__.py:F401,F403
max-complexity = 10

[options.extras_require]
test =
    pytest >= 6.2.2
    pytest-subtests
    pycodestyle
    pytest-cov
    flake8
dev =
    %(test)s
    black
